--- a/tablet.css
+++ b/tablet.css
@@ -576,6 +576,7 @@
       gap: 40px;
     }
     .free-service__container__head {
+      padding: 0 27.7px;
       gap: 32px;
     }
     .free-service__container__head__text-area {
