--- a/tablet.css
+++ b/tablet.css
@@ -299,12 +299,15 @@
       width: 720px;
       height: 372px;
     }
+    .serviceDetail__effect__cards__card__container__wrapper {
+      gap: 9px;
+    }
     .serviceDetail__effect__cards__card__container {
       gap: 16px;
     }
     .serviceDetail__effect__cards__card__container__image {
       position: absolute;
-      top: 32px;
+      top: 34px;
       left: 335px;
     }
     .serviceDetail__effect__cards__card__container__image img {
@@ -314,6 +317,7 @@
     }
     .serviceDetail__effect__cards__card__container__description {
       width: 300px;
+      text-align: center;
     }
     .serviceDetail__effect__cards__card__container__title h3 {
       font-size: 24px;
@@ -512,6 +516,7 @@
     .plan__container__description__lower h3 {
       font-size: 20px;
       letter-spacing: 0.4px;
+      line-height: 32px;
     }
     .plan__container__description__upper span {
       font-size: 32px;
@@ -542,6 +547,7 @@
     }
     .secondCTABanner__CTA-button__caption p {
       font-size: 24px;
+      letter-spacing: 0px;
       line-height: 24px;
     }
     .secondCTABanner__CTA-button__action-word h3 {
