--- a/style.css
+++ b/style.css
@@ -2049,7 +2049,7 @@ color: #D91E68;
   /* --------------contact--------------- */
     .contact {
   width: 1366px;
-  height: 2000px;
+  height: 2250px;
   display: flex;
   text-align: left;
   justify-content: center;
@@ -2076,7 +2076,7 @@ color: #D91E68;
 
 .contact__bg-lower {
   width: 1366px;
-  height: 1498px;
+  height: 1700px;
   position: absolute;
   bottom: 0px;
   flex-shrink: 0;
@@ -2144,7 +2144,10 @@ form {
   justify-content: left;
   align-items: start;margin-bottom: 40px;
 }
-
+.upper {
+  display: flex;
+  flex-direction: row;
+}
 .essential,
 .any,
 .space {
