--- a/tablet.css
+++ b/tablet.css
@@ -651,7 +651,7 @@
     /* -------------contact------------ */
     .contact {
       width: 768px;
-      height:  2400px;
+      height:  1700px;
     }
     .contact__bg-upper {
       width: 1440px;
@@ -680,13 +680,29 @@
     .contact__container__form {
       width: 704px;
       height: auto;
+      margin: 40px 0 97px;
     }
+    
     .column label,
     .column .select,
     .column .input,
     .column .textarea {
       font-size: 20px;
+      width: 275px;
+      margin-right: 0px;
+    }
+
+    .column input,
+    .column select {
       width: 350px;
+      height: 35px;
+      font-size: 16px;
+      stroke-width: 1px;
+      stroke: #304266;
+    } 
+    .column textarea {
+      width: 350px;
+      height: 200px;
     }
     .inner-text {
       font-size: 10px;
