--- a/phone.css
+++ b/phone.css
@@ -8,6 +8,9 @@
   .sp {
     display: block;
   }
+  html {
+    max-width: 375px;
+  }
     .top {
       width: 375px;
       height: 812px;
@@ -789,6 +792,9 @@
       width: 311px;
       justify-content: center;
     }
+    .faq__list__item__question.open {
+      margin-bottom: 16px;
+    }
     .faq__list__item__question__box {
       gap: 16px;
     }
@@ -901,7 +907,7 @@
   
     .contact {
       width: 375px;
-      height: 2100px;
+      height: 2050px;
     }
     .contact__bg-upper {
       clip-path: inset(0 84px 0 84px);
@@ -916,15 +922,17 @@
       top:29px;
     }
     .contact__container__title {
-      gap: 20px;
+      gap: 0px;
     }
   
     .contact__container__title h2 {
       font-size: 20px;
+      margin-bottom: 16px;
     }
   
     .contact__container__title__texts p {
       font-size: 16px;
+      line-height: 28px;
     }
   
     .contact__container__title__texts p span {
@@ -934,6 +942,7 @@
     .contact__container__form {
       width: 343px;
       height: 500px;
+      margin: 24px 0px 36px 0px;
     }
     .column {
       flex-direction: column;
@@ -941,6 +950,9 @@
     }
     .upper {
       display: flex;
+    }
+    .lower {
+      margin-top: 16px;
     }
     .column input,
     .column select {
@@ -966,15 +978,29 @@
     .essential,
     .any,
     .space {
+      padding: 4px 12px;
+    }
+    .essential,
+    .space {
       margin-right: 8px;
     }
+    .any {
+      margin-right: 19px;
+    }
     .submit-button {
+      padding: 8px 16px;
       width: 311px;
+      text-align: center;
+    }
+    .submit-button[value="送信する"] {
+      font-size: 16px;
+      letter-spacing: 0.8px;
     }
 /* ------------------contactform--------------- */
     
     .footer {
       width: 376px;
+      height: 200px;
     }
     .footer__container {
       width: 319px;
