--- a/normalize.css
+++ b/normalize.css
@@ -1,31 +1,31 @@
 /* A Modern CSS Reset */
-html,
+/* html,
 body,
-section {
+section,
+footer {
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-}
-body {
-  overflow-x: hidden;
-}
+} */
 html {
   background-color: #fff;
+  margin: 0 auto;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-
 }
-ul, li , ol{
-padding: 0;
-margin: 0;
+ul,
+li,
+ol {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 button {
-  border:none;
+  border: none;
 }
 .pc {
   display: block;
@@ -85,9 +85,9 @@ select {
   *,
   *::before,
   *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
+    animation-duration: 0.01ms;
+    animation-iteration-count: 1;
+    transition-duration: 0.01ms;
+    scroll-behavior: auto;
   }
 }
