--- a/normalize.css
+++ b/normalize.css
@@ -12,6 +12,15 @@ html {
   background-color: #fff;
   margin: 0 auto;
 }
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 a {
   color: inherit;
