--- a/normalize.css
+++ b/normalize.css
@@ -13,7 +13,8 @@ html {
   margin: 0 auto;
   overflow-x: hidden;
 }
-body {
+body,
+section {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -21,7 +22,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-x: hidden;
 }
 
 a {
