--- a/phone.css
+++ b/phone.css
@@ -662,12 +662,13 @@
 
   .flow__container__steps__step__image {
     position: static;
+    align-self: center;
     top: 60px;
     left: 16px;
   }
 
   .flow__container__steps__step__image img {
-    width: 248px;
+    width: 280px;
     height: 120px;
   }
 
@@ -878,6 +879,7 @@
     width: 320px;
     gap: 24px;
     flex-direction: column;
+    align-items: center;
     margin: 0 auto;
   }
 
@@ -930,6 +932,7 @@
   }
   .contact__container {
     top: 29px;
+    width: auto;
   }
   .contact__container__title {
     gap: 0px;
@@ -1010,7 +1013,7 @@
   /* ------------------footer--------------- */
 
   .footer {
-    width: 376px;
+    width: 100%;
     height: 200px;
   }
   .footer__container {
