--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@
 .top {
   width: 1366px;
   height: 768px;
-  padding: 34px 43px;
   background-color: #fafafa;
+  padding: 34px 43px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -487,9 +487,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  align-content: flex-start;
   gap: 32px 56px;
-  align-self: stretch;
   flex-wrap: wrap;
 }
 .issue__impact__container__items__item {
@@ -2094,7 +2092,7 @@
   top: 102px;
   display: flex;
   width: 1000px;
-  height: 100%;
+  height: auto;
   flex-direction: column;
   align-items: center;
   gap: 64px;
