--- a/phone.css
+++ b/phone.css
@@ -1013,7 +1013,7 @@
   /* ------------------footer--------------- */
 
   .footer {
-    width: 100%;
+    width: 375px;
     height: 200px;
   }
   .footer__container {
