--- a/normalize.css
+++ b/normalize.css
@@ -1,21 +1,18 @@
 /* A Modern CSS Reset */
-/* html,
-body,
-section,
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-} */
 html {
   background-color: #fff;
   margin: 0 auto;
   overflow-x: hidden;
 }
+body {
+  min-height: 100vh;
+  overflow-x: hidden;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
 body,
 section,
-footers {
+footer {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -71,11 +68,6 @@ ol[role="list"] {
 }
 html:focus-within {
   scroll-behavior: smooth;
-}
-body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
 }
 a:not([class]) {
   text-decoration-skip-ink: auto;
